fix text contrast on UserLink

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,11 @@ a {
   box-sizing: border-box;
 }
 
+.user-link:hover {
+  --user-link-color: #808080;
+  border-color: var(--user-link-color);
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
